# SmolShooter

./: Cargo.toml
src/: main.rs
src/shaders/: frag.frag  vert.vert
